--- a/mash.html
+++ b/mash.html
@@ -6,158 +6,112 @@
   <title>797 Distillery — Mash Builder</title>
 
   <link rel="stylesheet" href="header.css?v=1.0.0" />
-  <link rel="stylesheet" href="mash.css?v=1.0.0" />
+  <link rel="stylesheet" href="mash.css?v=2.0.0" />
 </head>
 <body>
-  <div id="global-header"></div>
 
-  <script>
-    const PAGE_TITLE = "Mash Builder";
-    const PAGE_SUBTITLE =
-      "Baseline recipes + ABV-driven scenario projections (saved test batches).";
-    fetch("header.html?v=1.0.0")
-      .then(r => r.text())
-      .then(html => (document.getElementById("global-header").innerHTML = html))
-      .catch(()=>{});
-  </script>
+<div id="global-header"></div>
 
-  <main class="mash-container">
-    <div class="topbar">
-      <div class="titleblock">
-        <h1>Mash Builder</h1>
-        <div class="sub">
-          Baseline recipes + ABV-driven scenario projections (saved test batches).
-        </div>
+<script>
+  const PAGE_TITLE = "Mash Builder";
+  const PAGE_SUBTITLE = "Batch planning and yield projection";
+  fetch("header.html?v=1.0.0")
+    .then(r => r.text())
+    .then(html => document.getElementById("global-header").innerHTML = html);
+</script>
+
+<main class="mash-container">
+
+  <div class="topbar">
+    <div>
+      <h1>Mash Builder</h1>
+      <div class="sub">Modular batch planning & yield projection</div>
+    </div>
+    <div class="engine-stamp" id="engineStamp">ENGINE VERSION: —</div>
+  </div>
+
+  <!-- MODULE: SETUP -->
+  <section class="module">
+    <h2>1. Batch Setup</h2>
+    <div class="grid">
+      <div>
+        <label>Mash Type</label>
+        <select id="mashSelect"></select>
       </div>
-      <div class="engine-stamp" id="engineStamp">
-        ENGINE VERSION: (loading…)
+      <div>
+        <label>Fill Volume (gal)</label>
+        <input id="fillGal" type="number" step="0.5" />
+      </div>
+      <div>
+        <label>Target Wash ABV (%)</label>
+        <input id="targetAbv" type="number" step="0.1" />
+        <div class="hint" id="targetHint"></div>
       </div>
     </div>
+  </section>
 
-    <section class="panel">
-      <h2>Setup</h2>
+  <!-- MODULE: FERMENTABLES -->
+  <section class="module">
+    <h2>2. Fermentables</h2>
+    <div id="ingredients" class="block"></div>
+  </section>
 
-      <div class="grid">
-        <div>
-          <label for="mashSelect">Mash Type</label>
-          <select id="mashSelect"></select>
-        </div>
-
-        <div>
-          <label for="tankSelect">Tank (quick fill)</label>
-          <select id="tankSelect"></select>
-          <div class="hint">
-            Selecting a tank sets Fill Volume to that working fill.
-          </div>
-        </div>
-
-        <div>
-          <label for="fillGal">Fill Volume (gal)</label>
-          <input id="fillGal" type="number" min="1" step="0.5" />
-          <div class="hint">You can type any value (not locked).</div>
-        </div>
-
-        <div>
-          <label for="targetAbv">Scenario Target Wash ABV (%)</label>
-          <input id="targetAbv" type="number" min="1" max="20" step="0.1" />
-          <div class="hint" id="targetHint"></div>
-        </div>
-
-        <div>
-          <label for="stillSelect">Stripping Still</label>
-          <select id="stillSelect"></select>
-        </div>
-
-        <div>
-          <label for="stripProof">Low Wines Avg (strip) %ABV</label>
-          <input id="stripProof" type="number" min="15" max="60" step="0.5" />
-          <div class="hint">Used for no-cuts strip estimate.</div>
-        </div>
-
-        <div>
-          <label for="chargeFillPct">Charge Fill % of still</label>
-          <input id="chargeFillPct" type="number" min="50" max="98" step="1" />
-          <div class="hint">Charge-based (not fermenter-based).</div>
-        </div>
-
-        <div class="lockrow">
-          <label class="checkbox">
-            <input type="checkbox" id="rumAdjustMode" />
-            Adjust rum L350 gallons to hit Target ABV (dedicated mode)
-          </label>
-          <div class="hint">
-            OFF by default (rule). When ON, L350 can only increase (never decrease).
-          </div>
-        </div>
+  <!-- MODULE: FERMENTATION -->
+  <section class="module">
+    <h2>3. Fermentation Targets</h2>
+    <div class="grid">
+      <div>
+        <label>Yeast (g)</label>
+        <div id="yeastBlock" class="readonly"></div>
       </div>
-
-      <div class="actions">
-        <button id="btnRecalc" class="btn">Recalculate</button>
-        <button id="btnReset" class="btn btn2">Reset</button>
+      <div>
+        <label>Nutrients (g)</label>
+        <div id="nutrientBlock" class="readonly"></div>
       </div>
-
-      <div id="fatalError" class="fatal" style="display:none"></div>
-    </section>
-
-    <section class="panel">
-      <h2>Scenario (Save a test batch)</h2>
-
-      <div class="scenario-grid">
-        <div>
-          <label for="scenarioName">Scenario Name</label>
-          <input id="scenarioName" type="text" />
-        </div>
-
-        <div class="scenario-actions">
-          <button id="btnSaveScenario" class="btn">Save Scenario</button>
-          <button id="btnExportScenario" class="btn btn2">Export JSON</button>
-        </div>
-
-        <div>
-          <label for="savedScenarioSelect">Saved Scenarios</label>
-          <select id="savedScenarioSelect"></select>
-        </div>
-
-        <div class="scenario-actions">
-          <button id="btnLoadScenario" class="btn">Load</button>
-          <button id="btnDeleteScenario" class="btn btn2">Delete</button>
-        </div>
+      <div>
+        <label>Target pH</label>
+        <div id="phBlock" class="readonly"></div>
       </div>
+    </div>
+  </section>
 
-      <div id="scenarioStatus" class="small"></div>
-    </section>
-
-    <section class="panel">
-      <h2>Results</h2>
-
-      <div class="results">
-        <div class="card">
-          <div class="cardtitle">Baseline (Ground Truth)</div>
-          <div id="baselineBlock"></div>
-        </div>
-
-        <div class="card">
-          <div class="cardtitle">Scenario Projection</div>
-          <div id="scenarioBlock"></div>
-        </div>
-
-        <div class="card">
-          <div class="cardtitle">Stripping Run Estimate (NO CUTS)</div>
-          <div id="stripBlock"></div>
-        </div>
-
-        <div class="card warn" id="ruleBlock" style="display:none">
-          <div class="cardtitle">Rule Notes</div>
-          <div id="ruleNotes"></div>
-        </div>
+  <!-- MODULE: STRIPPING -->
+  <section class="module">
+    <h2>4. Stripping Run</h2>
+    <div class="grid">
+      <div>
+        <label>Still</label>
+        <select id="stillSelect"></select>
       </div>
-    </section>
-  </main>
+      <div>
+        <label>Charge Fill (%)</label>
+        <input id="chargeFillPct" type="number" step="1" />
+      </div>
+      <div>
+        <label>Low Wines Avg %</label>
+        <input id="stripProof" type="number" step="0.5" />
+      </div>
+    </div>
+  </section>
 
-  <script src="mash-definitions.js?v=1.0.0"></script>
-  <script src="mash-rules.js?v=1.0.0"></script>
-  <script src="mash-engine.js?v=1.0.0"></script>
-  <script src="mash-storage.js?v=1.0.0"></script>
-  <script src="mash-ui.js?v=1.0.0"></script>
+  <!-- MODULE: RESULTS -->
+  <section class="module results">
+    <h2>5. Results</h2>
+    <div id="washBlock"></div>
+    <div id="stripBlock"></div>
+  </section>
+
+  <div class="actions">
+    <button id="btnRecalc" class="btn">Recalculate</button>
+  </div>
+
+  <div id="fatalError" class="fatal" style="display:none"></div>
+
+</main>
+
+<script src="mash-definitions.js?v=1.0.0"></script>
+<script src="mash-engine.js?v=1.0.0"></script>
+<script src="mash-ui.js?v=1.0.0"></script>
+
 </body>
 </html>
