--- a/products.html
+++ b/products.html
@@ -139,8 +139,11 @@
         <p>
           Canonical recipes used for scaling and production reference.
         </p>
-        <a href="mash.html">
+        <a href="mash-log.html">
           Mash Builder →
+        </a>
+        <a href="mash.html">
+          Mash Log →
         </a>
       </section>
 
